add more link text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1> RUN BUDDY</h1>
-        What We Do
+        What We Do What You Do Trainers Reach Out
     </body>
 </html>
