html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -5,7 +5,39 @@
         <title> Run Buddy</title>
     </head>
     <body>
-        <h1> RUN BUDDY</h1>
-        What We Do What You Do Trainers Reach Out
+        <!-- navigation -->
+    <header>
+        <h1>RUN BUDDY</h1>
+    </header>
+
+    <!-- hero/jumbotron-->
+    <section>
+    </section>
+
+    <!--"what we do" section-->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <!--"what you do" section-->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <!-- "meet the trainers" section-->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <!-- "reach out" section-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!-- footer-->
+    <footer>
+        <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
+    </footer>
+     
     </body>
 </html>
