--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title> Run Buddy</title>
-    </head>
-    <body>
-        <!-- navigation -->
+
+<head>
+    <meta charset="UTF-8" />
+    <title> Run Buddy</title>
+</head>
+
+<body>
+    <!-- navigation -->
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+            <!-- Unordered list element-->
+            <ul>
+                <!-- List item element-->
+                <li>
+                    <!-- Anchor element-->
+                    <a href="#what we do">What We Do</a>
+                </li>
+                <li>
+                    <a href="#what you do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <a href="#reach out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <!-- hero/jumbotron-->
@@ -38,6 +61,7 @@
     <footer>
         <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
     </footer>
-     
-    </body>
+
+</body>
+
 </html>
