--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     <!-- footer-->
     <footer>
         <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2021 Run Buddy, Inc.
+        </div>
     </footer>
 
 </body>
