--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
-            <!-- Unordered list element-->
+            <!-- Unordered list element-->™
             <ul>
                 <!-- List item element-->
                 <li>
@@ -35,8 +35,39 @@
     </header>
 
     <!-- hero/jumbotron-->
-    <section>
+    <section class="hero">
+        <div class="hero-form">
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <!-- ADD FORM ELEMENT -->
+            <form>
+                <label for="name">Enter full name:</label>
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
+                <label for="email">Enter your email address</label>
+                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
+                <label for="phone">Enter a telephone number</label>
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
+                <p>
+                    Have you worked with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                    <label for="trainer-yes">Yes</label>
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
+                    <label for="trainer-no">No</label>
+                </p>
+                <p>
+                    <label for="checkbox">
+                        I acknowledge that I am 18 years of age
+                    </label>
+                    <input type="checkbox" name="age-confirm" id="checkbox" />
+                </p>
+                <button type="submit">
+                    Get running!
+                </button>
+            </form>
+
+        </div>
     </section>
+    <!-- end hero -->
 
     <!--"what we do" section-->
     <section>
