added svgs to what you do section

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <!-- List item element-->
                 <li>
                     <!-- Anchor element-->
-                    <a href="#what we do">What We Do</a>
+                    <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
-                    <a href="#what you do">What You Do</a>
+                    <a href="#what-you-do">What You Do</a>
                 </li>
                 <li>
                     <a href="#your-trainers">Your Trainers</a>
@@ -70,13 +70,43 @@
     <!-- end hero -->
 
     <!--"what we do" section-->
-    <section>
+    <section id="what-we-do">
+        ...
         <h2>What We Do</h2>
+        <p>
+            Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Pellentesque ut neque. Vivamus euismod mauris. Duis lobortis massa imperdiet quam.   
+        </p>
     </section>
 
     <!--"what you do" section-->
-    <section>
+    <section id="what-you-do">
+        ...
         <h2>What You Do</h2>
+
+        <div>
+            <!-- insert this img element-->
+            <img src="./assets/images/step-1.svg" alt="" />
+            <h3>Step 1: Fill Out the Form Above.</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-2.svg" alt="" />
+            <h3> Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight or just feel good?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-3.svg" alt="" />
+            <h3> Step 3: Get Running.</h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-4.svg" alt="" />
+            <h3>Step 4: See Results.</h3>
+            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        </div>
     </section>
 
     <!-- "meet the trainers" section-->
