styled what we do section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- end hero -->
 
     <!--"what we do" section-->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         ...
         <h2>What We Do</h2>
         <p>
