meet the trainers section

--- a/index.html
+++ b/index.html
@@ -110,8 +110,47 @@
     </section>
 
     <!-- "meet the trainers" section-->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
+
+        <article class="trainer">
+            <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero dignissimos autem voluptates.
+                </p>
+            </div>
+        </article>
+        
+        <!-- second trainer bio-->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero dignissimos autem voluptates.
+                </p>
+            </div>
+            <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+
+        <!--third trainer bio-->
+        <article class="trainer">
+            <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero dignissimos autem voluptates.
+                </p>
+            </div>
+        </article>
+
+
     </section>
 
     <!-- "reach out" section-->
