--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </p>
             </div>
         </article>
-        
+
         <!-- second trainer bio-->
         <article class="trainer">
             <div class="trainer-bio text-right">
@@ -156,6 +156,30 @@
     <!-- "reach out" section-->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact_info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2983.066415106502!2d-71.96652798456724!3d41.6110754792443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e6786fe522f62f%3A0xf768d0db6f217064!2s206%20Lake%20Rd%2C%20Griswold%2C%20CT%2006351!5e0!3m2!1sen!2sus!4v1626637400861!5m2!1sen!2sus"
+                width="400"
+                height="400"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy">
+            </iframe>"
+
+        </div>
+        <div>
+            <h3>Run Buddy</h3>
+            <p>Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, Ca <br/>
+                12345 <br/>
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </section>
 
     <!-- footer-->
