style contact info

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#your-trainers">Your Trainers</a>
                 </li>
                 <li>
-                    <a href="#reach out">Reach Out</a>
+                    <a href="#reach-out">Reach Out</a>
                 </li>
             </ul>
         </nav>
@@ -42,11 +42,11 @@
             <!-- ADD FORM ELEMENT -->
             <form>
                 <label for="name">Enter full name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
                 <label for="email">Enter your email address</label>
-                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
+                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
                 <label for="phone">Enter a telephone number</label>
-                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
                 <p>
                     Have you worked with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -74,7 +74,8 @@
         ...
         <h2 class="section-title primary-border">What We Do</h2>
         <p>
-            Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Pellentesque ut neque. Vivamus euismod mauris. Duis lobortis massa imperdiet quam.   
+            Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+            Pellentesque ut neque. Vivamus euismod mauris. Duis lobortis massa imperdiet quam.
         </p>
     </section>
 
@@ -121,7 +122,9 @@
                 <h3>Arron Stephens</h3>
                 <h4>Speed / Strength</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero dignissimos autem voluptates.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
+                    veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero
+                    dignissimos autem voluptates.
                 </p>
             </div>
         </article>
@@ -132,7 +135,9 @@
                 <h3>Joanna Gill</h3>
                 <h4>Endurance</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero dignissimos autem voluptates.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
+                    veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero
+                    dignissimos autem voluptates.
                 </p>
             </div>
             <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
@@ -140,12 +145,15 @@
 
         <!--third trainer bio-->
         <article class="trainer">
-            <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <img src="assets/images/trainer-3.jpg"
+                alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
                 <h3>Harry "the Headband" Smith</h3>
                 <h4>Strength</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero dignissimos autem voluptates.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
+                    veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero
+                    dignissimos autem voluptates.
                 </p>
             </div>
         </article>
@@ -154,32 +162,32 @@
     </section>
 
     <!-- "reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
-        <div class="contact_info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2983.066415106502!2d-71.96652798456724!3d41.6110754792443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e6786fe522f62f%3A0xf768d0db6f217064!2s206%20Lake%20Rd%2C%20Griswold%2C%20CT%2006351!5e0!3m2!1sen!2sus!4v1626637400861!5m2!1sen!2sus"
-                width="400"
-                height="400"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy">
-            </iframe>"
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
 
-        </div>
-        <div>
-            <h3>Run Buddy</h3>
+        <div class="contact-info">
+            <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2983.066415106502!2d-71.96652798456724!3d41.6110754792443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e6786fe522f62f%3A0xf768d0db6f217064!2s206%20Lake%20Rd%2C%20Griswold%2C%20CT%2006351!5e0!3m2!1sen!2sus!4v1626637400861!5m2!1sen!2sus"
+                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>"
+            </div>
+        
+            <div>
+                <h3>Run Buddy</h3>
             <p>Any questions or concerns before signing up?
                 <br />
                 Let us know and we'll be happy to talk to you!
-            </p>
+            </>
             <address>
-                55 Main Street <br/>
-                Some Town, Ca <br/>
-                12345 <br/>
-                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                55 Main Street <br />
+                Some Town, Ca <br />
+                12345 <br />
+                P: 555.RUN.BUDZ (555.786.2839)<br />
                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
             </address>
         </div>
+    </div>
     </section>
 
     <!-- footer-->
