--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
-        ...
+        
         <h2 class="section-title primary-border">What We Do</h2>
         <p>
             Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
@@ -81,7 +81,7 @@
 
     <!--"what you do" section-->
     <section id="what-you-do" class="steps">
-        ...
+
         <h2 class="section-title secondary-border">What You Do</h2>
 
         <div>
@@ -148,7 +148,7 @@
             <img src="assets/images/trainer-3.jpg"
                 alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
+                <h3>Harry "The Headband" Smith</h3>
                 <h4>Strength</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
@@ -194,7 +194,7 @@
     <footer>
         <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2021 Run Buddy, Inc.
         </div>
     </footer>
