add content to hero, replace image

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title> Run Buddy</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -36,8 +36,19 @@
 
     <!-- hero/jumbotron-->
     <section class="hero">
+        <div>
+            <h2>
+                Start Building Habits.
+            </h2>
+            <p>Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit
+                pede quis nunc. Sed lectus. Cras ultricies mi eu turpis hendrerit fringilla.
+
+                Vestibulum suscipit nulla quis orci. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+                sem. Fusce commodo aliquam arcu.
+            </p>
+        </div>
         <div class="hero-form">
-            <h3>Get Started Today</h3>
+            <h3>Get Started Today.</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!-- ADD FORM ELEMENT -->
             <form>
@@ -71,7 +82,7 @@
 
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
-        
+
         <h2 class="section-title primary-border">What We Do</h2>
         <p>
             Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
