added flex row to div and p

--- a/assets/index.html
+++ b/assets/index.html
@@ -37,9 +37,12 @@
     <!-- hero/jumbotron-->
     <section class="hero">
         <div>
-            <h2>
-                Start Building Habits.
-            </h2>
+            <div class="flex-row">
+                <h2>
+                    Start Building Habits.
+                </h2>
+            </div>
+
             <p>Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit
                 pede quis nunc. Sed lectus. Cras ultricies mi eu turpis hendrerit fringilla.
 
@@ -83,17 +86,28 @@
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
 
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-            Pellentesque ut neque. Vivamus euismod mauris. Duis lobortis massa imperdiet quam.
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+
+        <div class="flex-row">
+            <p>
+                Vivamus consectetuer hendrerit lacus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
+                arcu.
+                Pellentesque ut neque. Vivamus euismod mauris. Duis lobortis massa imperdiet quam.
+            </p>
+        </div>
+
     </section>
 
     <!--"what you do" section-->
     <section id="what-you-do" class="steps">
 
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
+        </div>
 
         <div>
             <!-- insert this img element-->
@@ -123,9 +137,12 @@
 
     <!-- "meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">
-            Meet The Trainers
-        </h2>
+
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+        </div>
 
         <article class="trainer">
             <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -174,8 +191,10 @@
 
     <!-- "reach out" section-->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
 
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
 
         <div class="contact-info">
             <iframe
@@ -209,12 +228,16 @@
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
         </div>
-        
+
     </section>
 
     <!-- footer-->
     <footer>
-        <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
+
+        <div class="flex-row">
+            <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
+        </div>
+
         <div>
             <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2021 Run Buddy, Inc.
