--- a/assets/index.html
+++ b/assets/index.html
@@ -37,11 +37,9 @@
     <!-- hero/jumbotron-->
     <section class="hero">
         <div>
-            <div class="flex-row">
-                <h2>
-                    Start Building Habits.
-                </h2>
-            </div>
+            <h2>
+                Start Building Habits.
+            </h2>
 
             <p>Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit
                 pede quis nunc. Sed lectus. Cras ultricies mi eu turpis hendrerit fringilla.
@@ -101,91 +99,128 @@
     </section>
 
     <!--"what you do" section-->
-    <section id="what-you-do" class="steps">
 
-        <div class="flex-row">
-            <h2 class="section-title primary-border">
-                What We Do
-            </h2>
-        </div>
 
-        <div>
-            <!-- insert this img element-->
-            <img src="./assets/images/step-1.svg" alt="" />
-            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-            <p>You're already here, so why not?</p>
-        </div>
 
-        <div>
-            <img src="./assets/images/step-2.svg" alt="" />
-            <h3> Step 2: <span>Consult with One of Our Trainers.</span></h3>
-            <p>Are you here to build muscle, lose weight or just feel good?</p>
-        </div>
+    <div class="flex-row">
+        <h2 class="section-title primary-border">
+            What You Do
+        </h2>
+    </div>
 
-        <div>
-            <img src="./assets/images/step-3.svg" alt="" />
-            <h3> Step 3: <span>Get Running.</span></h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+    <div class="step">
+        <h3>Step 1.</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./images/step-1.svg" alt="" />
+            </div>
+            <div class="step-text">
+                <h4>Fill Out The Form Above</h4>
+                <p>You're already here, so why not?</p>
+            </div>
         </div>
+    </div>
 
-        <div>
-            <img src="./assets/images/step-4.svg" alt="" />
-            <h3>Step 4: <span>See Results.</span></h3>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+    <div class="step">
+        <h3> Step 2:</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./images/step-2.svg" alt="" />
+            </div>
+            <div class="step-text">
+                <h4>Consult with One of Our Trainers.</h4>
+                <p>Are you here to build muscle, lose weight or just feel good?</p>
+            </div>
         </div>
+    </div>
+
+    <div class="step">
+        <h3> Step 3:</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./images/step-3.svg" alt="" />
+            </div>
+            <div class="step-text">
+                <h4>Get Running.</h4>
+                <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="step">
+        <h3>Step 4:</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./images/step-4.svg" alt="" />
+            </div>
+            <div class="step-text">
+                <h4>See Results.</h4>
+                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            </div>
+        </div>
+    </div>
+
     </section>
 
     <!-- "meet the trainers" section-->
-    <section id="your-trainers" class="trainers">
+    <section>
 
-        <div class="flex-row">
-            <h2 class="section-title primary-border">
-                Meet The Trainers
-            </h2>
-        </div>
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
 
-        <article class="trainer">
-            <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
-                    veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero
-                    dignissimos autem voluptates.
-                </p>
-            </div>
-        </article>
+        <div class="trainers">
+            <article class="trainer">
+                <img src="./images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga?
+                        Culpa
+                        veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum
+                        vero
+                        dignissimos autem voluptates.
+                    </p>
+                </div>
+            </article>
 
-        <!-- second trainer bio-->
-        <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
-                    veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero
-                    dignissimos autem voluptates.
-                </p>
-            </div>
-            <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-        </article>
+            <!-- second trainer bio-->
 
-        <!--third trainer bio-->
-        <article class="trainer">
-            <img src="assets/images/trainer-3.jpg"
-                alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "The Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga? Culpa
-                    veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum vero
-                    dignissimos autem voluptates.
-                </p>
-            </div>
-        </article>
+            <article class="trainer">
+                <img src="./images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga?
+                        Culpa
+                        veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum
+                        vero
+                        dignissimos autem voluptates.
+                    </p>
+                </div>
+            </article>
 
+
+            <!--third trainer bio-->
+
+            <article class="trainer">
+                <img src="./images/trainer-3.jpg"
+                    alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae amet similique fuga?
+                        Culpa
+                        veniam ullam eveniet a doloremque labore tenetur nihil repellat quisquam? Rem delectus earum
+                        vero
+                        dignissimos autem voluptates.
+                    </p>
+                </div>
+            </article>
+            <div />
 
     </section>
 
@@ -234,9 +269,7 @@
     <!-- footer-->
     <footer>
 
-        <div class="flex-row">
-            <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
-        </div>
+        <h2>&#10084;&#65039; Made with love by Run Buddy</h2>
 
         <div>
             <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
