added media queries

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Run Buddy</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -101,9 +102,9 @@
     <!--"what you do" section-->
 
 
-
+<section id="what you do" class="steps">
     <div class="flex-row">
-        <h2 class="section-title primary-border">
+        <h2 class="section-title secondary-border">
             What You Do
         </h2>
     </div>
